# realbot

./: pyproject.toml
adapters/: tg.py
adapters/db/: stats.py
core/: actions.py  inline.py  stats.py
helpers/: rand.py
