[project]
name = "realbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiodns==4.0.0",
    "aiohttp>=3.13.3",
    "aiogram>=3.24.0",
    "apscheduler==3.11.1",
    "dulwich==0.24.1",
    "emoji==2.14.1",
    "jieba>=0.42.1",
    "mastodon-py==2.0.1",
    "matrix-nio==0.25.2",
    "mcstatus==12.0.2",
    "pangu==4.0.6.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "tortoise-orm==0.25.3",
    "unidecode==1.4.0",
]
